--- a/View/Style/style.css
+++ b/View/Style/style.css
@@ -79,22 +79,56 @@ li a:hover:not(.active) {
 .buttonCategorie{ /* Visible uniquement en mode portrait */
     visibility: hidden;
 }
-.boutonBillet{
-    border-radius: 10px;
-    background-color: #cccccc;
-    padding: 9vh;
+
+/*test flex box 5 billet */
+
+.info-section {
+    font-size: 40px;
+    font-family: Arial;
+}
+
+.btn-flex {
+    width: 30vh;
+    height: 20vh;
     margin-left: 2.5%;
     margin-right: 2.5%;
-    width: 30vh;
     margin-top: 2em;
+    border-radius: 10px;
     overflow: hidden; /* empeche le debordement */
-    white-space: nowrap; /* empeche les retour a la ligne etla deformation du bouton */
-    text-overflow: ellipsis; /* met "..." en cas de debordement */
+    white-space: nowrap; /* empeche les retour a la ligne et la deformation du bouton */
+
 
 }
-/* quand la sourie survol le bouton */
-.boutonBillet:hover{
-    background-color: darkgrey;
+
+.txt-btn {
+    height: 100%;
+    display: flex;
+    min-width: 150px;
+    font-size: 222%;
+    text-overflow: ellipsis; /* met "..." en cas de debordement */
+}
+
+
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+    scrollbar-width: auto;
+    scrollbar-color: #616161 #ffffff;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+    width: 14px;
+}
+
+*::-webkit-scrollbar-track {
+    background: #ffffff;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #616161;
+    border-radius: 7px;
+    border: 4px solid #ffffff;
 }
 footer {
     text-align: center;
