--- a/View/Style/stylePortable.css
+++ b/View/Style/stylePortable.css
@@ -90,6 +90,55 @@ li a:hover:not(.active) {
 .boutonBillet:hover{
     background-color: darkgrey;
 }
+
+.info-section {
+    font-size: 40px;
+    font-family: Arial;
+}
+
+.btn-flex {
+    width: 100%;
+    height: 10vh;
+    padding: 1vh;
+    margin-top: 1em;
+    margin-left: 1.5%;
+    margin-right: 1.5%;
+    display: block;
+    border: 1px solid black;
+    overflow: hidden; /* empeche le debordement */
+    white-space: nowrap; /* empeche les retour a la ligne et la deformation du bouton */
+
+}
+
+.txt-btn {
+    height: 100%;
+    display: flex;
+    min-width: 150px;
+    font-size: 222%;
+    text-overflow: ellipsis; /* met "..." en cas de debordement */
+}
+
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+    scrollbar-width: auto;
+    scrollbar-color: #616161 #ffffff;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+    width: 14px;
+}
+
+*::-webkit-scrollbar-track {
+    background: #ffffff;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #616161;
+    border-radius: 7px;
+    border: 4px solid #ffffff;
+}
 footer {
     text-align: center;
     padding: 5px;
