--- a/View/Style/style.css
+++ b/View/Style/style.css
@@ -149,3 +149,40 @@ footer {
     bottom: 0;
     width: 100%;
 }
+
+.compte{
+    background-color: darkseagreen;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: black;
+    padding: 3vh;
+    margin: 1em;
+}
+.boutonchanger_mdp{
+    border-radius: 5px;
+    border-color: #263e1a;
+    background-color: lightgreen;
+}
+.boutonchanger_mdp:hover{
+    background-color: #59ab59;
+}
+
+.suprimer_compte{
+    border-radius: 15px;
+    background-color: #b42828;
+    border-color: darkred;
+}
+.suprimer_compte:hover{
+    border-radius: 5px;
+    background-color: #e32e2e;
+    border-color: #bb0000;
+}
+.changer_mdp{
+    background-color: darkseagreen;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: black;
+    padding: 3vh;
+    margin: 1em;
+    text-align: center;
+}
