ajout du menu responsive

--- a/View/Style/stylePortable.css
+++ b/View/Style/stylePortable.css
@@ -2,27 +2,47 @@ body {
     font-family: Arial, sans-serif;
     height: 100vh;
     margin:0;
-
 }
 
-ul {
+.menu {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+    margin: auto;
+    margin-top: 1%;
+    padding:1% ;
     overflow: hidden;
-    background-color: #00561b;
-    position: sticky;
+    background: linear-gradient( rgba(68, 58, 82, 0.8),  rgba(68, 58, 82, 0.8));
+    width: 98%;
+    border-radius: 15px;
+    box-sizing: border-box;
     top: 0;
-    width: 100%;
 
 }
 
-li:not(#droite){
+.menu a{
     float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+
+}
+.blur{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(10px); /* Ou la quantité de flou que vous souhaitez */
+    z-index: -1; /* Assurez-vous que l'arrière-plan flou est en dessous de tout */
 }
 
-li a {
-    display: block;
+li {
+    float: left;
+
+}
+li a, .dropbtn {
+    display: inline-block;
     color: white;
     text-align: center;
     padding: 14px 16px;
@@ -31,14 +51,59 @@ li a {
 
 li a:hover:not(.active) {
     background-color: #263e1a;
+    border-radius: 15px;
 }
 
 .active {
     background-color: #3a963b;
+    border-radius: 15px;
 }
 
-#droite{
-    float:right;
+li.dropdown {
+    display: inline-block;
+}
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+.dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+}
+.menu a:hover, .dropdown:hover .dropbtn {
+    background-color: red;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    backdrop-filter: none;
+}
+
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 /* categories a gauche */
