--- a/View/Style/style.css
+++ b/View/Style/style.css
@@ -53,14 +53,17 @@ li a:hover:not(.active) {
 li.dropdown {
     display: inline-block;
 }
-
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
 .dropdown-content {
     display: none;
     position: fixed;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 2; /* Ajout de cette ligne */
+    z-index: -1; /* Ajout de cette ligne */
     backdrop-filter: none;
 }
 
