menu bar passe en fixed

--- a/View/Style/style.css
+++ b/View/Style/style.css
@@ -14,7 +14,6 @@ body {
     width: 98%;
     border-radius: 15px;
     box-sizing: border-box;
-    position: sticky;
     top: 0;
 
 }
@@ -59,11 +58,11 @@ li.dropdown {
 }
 .dropdown-content {
     display: none;
-    position: fixed;
+    position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: -1; /* Ajout de cette ligne */
+    z-index: 1;
     backdrop-filter: none;
 }
 
