--- a/View/Style/stylePortable.css
+++ b/View/Style/stylePortable.css
@@ -258,3 +258,12 @@ footer {
     margin-top: 5em;
     text-align: center;
 }
+.fomulaire{
+    background-color: darkseagreen;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: black;
+    padding: 3vh;
+    margin: 1em;
+    text-align: start;
+}
