--- a/View/Style/style.css
+++ b/View/Style/style.css
@@ -202,10 +202,10 @@ footer {
     border-color: #bb0000;
 }
 .fomulaire{
-    background-color: darkseagreen;
+    background-color: #f99d52;
     border-radius: 10px;
     border-style: solid;
-    border-color: black;
+    border-color: #ed2323;
     padding: 5vh;
     margin: 1em;
     text-align: start;
