--- a/View/Style/stylePortable.css
+++ b/View/Style/stylePortable.css
@@ -1,7 +1,13 @@
+html {
+    height: 100%;
+}
 body {
     font-family: Arial, sans-serif;
-    height: 100vh;
     margin:0;
+    background-image: linear-gradient(rgba(179, 179, 189, 0.5), rgba(0, 0, 0, 0.8)),url(https://assetsio.reedpopcdn.com/dnd-map-maker-inkarnate.png?width=1200&height=1200&fit=bounds&quality=70&format=jpg&auto=webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
 }
 
 .menu {
