--- a/View/Style/style.css
+++ b/View/Style/style.css
@@ -7,6 +7,7 @@ body {
     background-image: linear-gradient(rgba(179, 179, 189, 0.5), rgba(0, 0, 0, 0.8)),url(https://assetsio.reedpopcdn.com/dnd-map-maker-inkarnate.png?width=1200&height=1200&fit=bounds&quality=70&format=jpg&auto=webp);
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     height: 100%;
 }
 
@@ -173,11 +174,12 @@ li.dropdown {
 footer {
     text-align: center;
     padding: 5px;
+    left: 0;
+    bottom: 0;
+    width: 100%;
     background-color: #bcb7b6;
     color: #000;
     position: fixed;
-    bottom: 0;
-    width: 100%;
 }
 
 .boutonchanger_mdp{
