--- a/View/Style/stylePortable.css
+++ b/View/Style/stylePortable.css
@@ -7,6 +7,7 @@ body {
     background-image: linear-gradient(rgba(179, 179, 189, 0.5), rgba(0, 0, 0, 0.8)),url(https://assetsio.reedpopcdn.com/dnd-map-maker-inkarnate.png?width=1200&height=1200&fit=bounds&quality=70&format=jpg&auto=webp);
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     height: 100%;
 }
 
@@ -88,7 +89,7 @@ li.dropdown {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #174370;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -97,7 +98,7 @@ li.dropdown {
 
 .dropdown-content a {
     float: none;
-    color: black;
+    color: #f9f9f9;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -105,13 +106,19 @@ li.dropdown {
 }
 
 .dropdown-content a:hover {
-    background-color: #f1f1f1;
+    background-color: #117882;
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
 }
 
+.buttonCategorie{
+    background-color: #e5b596;
+    border-color: #bd522b;
+    border-style: solid;
+    border-radius: 6px;
+}
 /* categories a gauche */
 
 .categories {
@@ -149,19 +156,15 @@ li.dropdown {
     font-size: 1.8vh;
 }
 .boutonBillet{
-    background-color: #cccccc;
+    background-color: #e4b495;
     display: block;
-    border: 1px solid black;
+    border: 1px solid #bc522b;
     width: 100%;
     padding: 1vh;
     overflow: hidden; /* empeche le debordement */
     white-space: nowrap; /* empeche les retour a la ligne etla deformation du bouton */
     text-overflow: ellipsis; /* met "..." en cas de debordement */
 
-}
-/* quand la sourie survol le bouton */
-.boutonBillet:hover{
-    background-color: darkgrey;
 }
 
 .info-section {
