--- a/View/Style/style.css
+++ b/View/Style/style.css
@@ -138,7 +138,7 @@ li.dropdown {
 
 /* categories a gauche */
 
-.categories {
+.category {
     float: left;
     width: 12vh;
     min-width: 8em;
@@ -151,7 +151,7 @@ li.dropdown {
     overflow: scroll; /*contre le debordement de la boite associer*/
 }
 
-.categories h2 {
+.category h2 {
     font-size: 1.5em;
 }
 
@@ -172,7 +172,7 @@ li.dropdown {
 }
 
 
-.buttonCategorie{ /* Visible uniquement en mode portrait */
+.buttonCategory{ /* Visible uniquement en mode portrait */
     visibility: hidden;
 }
 
@@ -237,26 +237,26 @@ footer {
     position: fixed;
 }
 
-.boutonchanger_mdp{
+.checkButton{
     border-radius: 5px;
     border-color: #263e1a;
     background-color: lightgreen;
 }
-.boutonchanger_mdp:hover{
+.checkButton:hover{
     background-color: #59ab59;
 }
 
-.suprimer_compte{
+.delAccoutButton{
     border-radius: 15px;
     background-color: #b42828;
     border-color: darkred;
 }
-.suprimer_compte:hover{
+.delAccoutButton:hover{
     border-radius: 5px;
     background-color: #e32e2e;
     border-color: #bb0000;
 }
-.fomulaire{
+.fomBox{
     background-color: #e5b596;
     border-radius: 10px;
     border-style: solid;
