--- a/View/Style/stylePortable.css
+++ b/View/Style/stylePortable.css
@@ -330,3 +330,11 @@ footer {
     margin: 1em;
     text-align: start;
 }
+.btnBillet{
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 1%;
+    border-radius: 10px;
+    background-color: #E5B596FF;
+    border-color: #B5532BFF;
+}
