fix nom variable

--- a/View/Style/style.css
+++ b/View/Style/style.css
@@ -262,7 +262,7 @@ footer {
     background-color: #e32e2e;
     border-color: #bb0000;
 }
-.fomBox{
+.fromBox{
     background-color: #e5b596;
     border-radius: 10px;
     border-style: solid;
