--- a/View/Style/style.css
+++ b/View/Style/style.css
@@ -147,7 +147,7 @@ li.dropdown {
     width: 12vh;
     min-width: 8em;
     height: 100vh;
-    background-color: #e5b596;
+    background-color: #edd6a0;
     border: 1px solid #bd522b;
     padding: 1%;
     margin-top: 7vh;
@@ -165,7 +165,7 @@ li.dropdown {
 .comments {
     position: static;
     margin-left:14.5vh;
-    background-color: #e5b596;
+    background-color: #edd6a0;
     border: 1px solid #bd522b;
     border-radius: 8px;
     margin-top: 5vh;
@@ -188,15 +188,13 @@ li.dropdown {
 }
 
 .btn-flex {
-    width: 30vh;
-    height: 20vh;
-    margin-left: 2.5%;
-    margin-right: 2.5%;
-    margin-top: 6em;
+    width: 15%;
+    margin-left: 4%;
+    margin-top: 5%;
     border-radius: 10px;
     overflow: hidden; /* empeche le debordement */
     white-space: nowrap; /* empeche les retour a la ligne et la deformation du bouton */
-    background-color: #ffba93;
+    background-color: #edd6a0;
     border-color: #B5532BFF;
 
 
@@ -263,7 +261,7 @@ footer {
     border-color: #bb0000;
 }
 .fromBox{
-    background-color: #e5b596;
+    background-color: #edd6a0;
     border-radius: 10px;
     border-style: solid;
     border-color: #b5532b;
@@ -289,6 +287,6 @@ footer {
     margin-left: 10%;
     margin-top: 1%;
     border-radius: 10px;
-    background-color: #E5B596FF;
+    background-color: #edd6a0;
     border-color: #B5532BFF;
 }
