fix css PostBillet

--- a/View/Style/stylePortable.css
+++ b/View/Style/stylePortable.css
@@ -326,7 +326,7 @@ footer {
     margin-top: 5em;
     text-align: center;
 }
-.fromBox{
+.formBox{
     background-color: #e5b596;
     border-radius: 10px;
     border-style: solid;
