--- a/View/Style/style.css
+++ b/View/Style/style.css
@@ -260,7 +260,7 @@ footer {
     background-color: #e32e2e;
     border-color: #bb0000;
 }
-.fromBox{
+.formBox{
     background-color: #edd6a0;
     border-radius: 10px;
     border-style: solid;
