--- a/View/Style/style.css
+++ b/View/Style/style.css
@@ -26,20 +26,20 @@ body {
     border-radius: 15px;
     box-sizing: border-box;
     top: 0;
-
 }
-
 
 li {
     float: left;
-
 }
+
 li a, .dropbtn {
     display: inline-block;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    border-radius: 15px;
+    transition: background-color 0.3s;
 }
 
 li a:hover:not(.active) {
@@ -77,7 +77,9 @@ li.dropdown {
     text-align: left;
 }
 
-.dropdown-content a:hover {background-color: #f1f1f1;}
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
 
 .dropdown:hover .dropdown-content {
     display: block;
@@ -187,17 +189,28 @@ li.dropdown {
     font-family: Arial;
 }
 
+.section-flex{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .btn-flex {
     width: 15%;
     margin-left: 4%;
     margin-top: 5%;
-    border-radius: 10px;
-    overflow: hidden; /* empeche le debordement */
-    white-space: nowrap; /* empeche les retour a la ligne et la deformation du bouton */
-    background-color: #edd6a0;
-    border-color: #B5532BFF;
+    border-radius: 8px;
+    overflow: hidden;
+    background-color: #117883;
+    color:#ffffff ;
+    font-size: 16px;
+    transition: background-color 0.3s;
+}
 
-
+/*switch souris pour le btn flex*/
+.btn-flex:hover {
+    background-color: #174370; /* Couleur foncée au survol */
+    color: #ffffff; /* Texte blanc au survol */
 }
 
 .txt-btn {
@@ -211,11 +224,11 @@ li.dropdown {
 
 /* ===== Scrollbar CSS ===== */
 /* Firefox */
+
 * {
     scrollbar-width: auto;
     scrollbar-color: #616161 #ffffff;
 }
-
 /* Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
     width: 14px;
@@ -230,6 +243,7 @@ li.dropdown {
     border-radius: 7px;
     border: 4px solid #ffffff;
 }
+/* bas de page */
 footer {
     text-align: center;
     padding: 5px;
@@ -260,15 +274,45 @@ footer {
     background-color: #e32e2e;
     border-color: #bb0000;
 }
-.formBox{
-    background-color: #edd6a0;
-    border-radius: 10px;
-    border-style: solid;
-    border-color: #b5532b;
-    padding: 5vh;
-    margin: 1em;
-    text-align: start;
+
+/* Login */
+.formBox {
+    max-width: 20%;
+    margin: 0 auto;
+    margin-top: 1%;
+    padding: 3%;
+    background-color: #ffffff;
+    border-radius: 8px;
+
 }
+#login{
+    text-align: center;
+}
+/*design du formbox*/
+.formBox input {
+    width: 95%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #cccccc;
+    font-size: 16px;
+}
+
+/*Couleur de signin/up */
+.formBox input[type="submit"] {
+    background-color: #174370;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 18px;
+}
+
+/*Des que l on passe la souris dessus l input signup/in sa change de couleur */
+.formBox input[type="submit"]:hover {
+    background-color: #117883;
+}
+
+/*page 404 */
 .image404{
     max-width: 30%;
     max-height: 30%;
@@ -282,6 +326,8 @@ footer {
     margin-top: 5em;
     text-align: center;
 }
+
+/* pour les billet */
 .btnBillet{
     width: 80%;
     margin-left: 10%;
@@ -329,4 +375,50 @@ td{
 {
     text-align: center;
     color: #ffffff;
+}
+
+/* utilisateur*/
+
+.util {
+    max-width: 500px;
+    margin: 0 auto ;
+    margin-top: 8%;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#connectedform {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#connectedform button {
+    margin: 10px;
+    padding: 10px 20px;
+    background-color: #174370;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s;
+}
+
+#connectedform button:hover {
+    background-color: #117883;
+}
+
+/*Page about*/
+.about{
+    max-width: 800px;
+    margin: 0 auto;
+    margin-top: 8%;
+    padding-top: 10px ;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    text-align: center;
+    font-size: 18px;
+    line-height: 1.6; /* S'il n'y a pas d'unité, cela représente un facteur multiplicateurde la taille de la police appliquée à l'élément */
 }
