--- a/View/Style/stylePortable.css
+++ b/View/Style/stylePortable.css
@@ -21,7 +21,7 @@ body {
     list-style-type: none;
     margin: auto;
     margin-top: 1%;
-    padding:1% ;
+    padding:2% ;
     overflow: hidden;
     background-color: #174370;
     width: 98%;
@@ -33,22 +33,14 @@ body {
 
 .menu a{
     float: left;
-    font-size: 16px;
+    font-size: 20px;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 
 }
-.blur{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    backdrop-filter: blur(10px); /* Ou la quantité de flou que vous souhaitez */
-    z-index: -1; /* Assurez-vous que l'arrière-plan flou est en dessous de tout */
-}
+
 
 li {
     float: left;
@@ -80,7 +72,7 @@ li.dropdown {
     overflow: hidden;
 }
 .dropdown .dropbtn {
-    font-size: 16px;
+    font-size: 20px;
     border: none;
     outline: none;
     color: white;
@@ -89,15 +81,11 @@ li.dropdown {
     font-family: inherit;
     margin: 0;
 }
-.menu a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
-}
+
 .dropdown-content {
     display: none;
     position: absolute;
     background-color: #174370;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     backdrop-filter: none;
 }
@@ -178,18 +166,21 @@ li.dropdown {
     font-family: Arial;
 }
 
+
+
 .btn-flex {
-    width: 100%;
+    width: 80%;
     height: 10vh;
     padding: 1vh;
+    margin: 0 auto;
     margin-top: 1em;
     margin-left: 1.5%;
-    margin-right: 1.5%;
-    display: block;
     border: 1px solid black;
+    border-radius: 8px;
+    background-color: #117883;
+    color:#ffffff ;
     overflow: hidden; /* empeche le debordement */
     white-space: nowrap; /* empeche les retour a la ligne et la deformation du bouton */
-
 }
 
 .txt-btn {
@@ -313,6 +304,45 @@ footer {
     padding: 3vh;
     margin: 1em;
 }
+
+
+/* Login */
+.formBox {
+    max-width: 40%;
+    margin: 0 auto;
+    margin-top: 6%;
+    padding: 3%;
+    background-color: #ffffff;
+    border-radius: 8px;
+
+}
+#login{
+    text-align: center;
+}
+/*design du formbox*/
+.formBox input {
+    width: 95%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #cccccc;
+    font-size: 16px;
+}
+
+/*Couleur de signin/up */
+.formBox input[type="submit"] {
+    background-color: #174370;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 18px;
+}
+
+/*Des que l on passe la souris dessus l input signup/in sa change de couleur */
+.formBox input[type="submit"]:hover {
+    background-color: #117883;
+}
+
 .image404{
     max-width: 50%;
     max-height: 50%;
@@ -326,15 +356,7 @@ footer {
     margin-top: 5em;
     text-align: center;
 }
-.formBox{
-    background-color: #e5b596;
-    border-radius: 10px;
-    border-style: solid;
-    border-color: #bd522b;
-    padding: 3vh;
-    margin: 1em;
-    text-align: start;
-}
+
 .btnBillet{
     width: 80%;
     margin-left: 10%;
@@ -351,4 +373,74 @@ footer {
     border-radius: 5px;
     background-color: #edd6a0;
     border-color: #B5532BFF;
+}
+
+/* tableau recherche*/
+table {
+    border-collapse: collapse;
+    width: 50%;
+    margin: 0 auto;
+
+}
+th, td {
+    border: 1px solid black;
+    padding: 8px;
+    text-align: center;
+
+
+}
+th {
+    background-color: #174370;
+    vertical-align:baseline;
+    color: #ffffff;
+}
+
+td{
+    background-color: #edd6a0;
+}
+
+/* utilisateur*/
+
+.util {
+    max-width: 500px;
+    margin: 0 auto ;
+    margin-top: 8%;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#connectedform {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#connectedform button {
+    margin: 10px;
+    padding: 10px 20px;
+    background-color: #174370;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s;
+}
+
+#connectedform button:hover {
+    background-color: #117883;
+}
+
+/*Page about*/
+.about{
+    max-width: 800px;
+    margin: 0 auto;
+    margin-top: 8%;
+    padding-top: 10px ;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    text-align: center;
+    font-size: 18px;
+    line-height: 1.6; /* S'il n'y a pas d'unité, cela représente un facteur multiplicateurde la taille de la police appliquée à l'élément */
 }
