--- a/View/Style/style.css
+++ b/View/Style/style.css
@@ -153,6 +153,7 @@ li.dropdown {
     background-color: #f5f5f5;
     padding: 15px;
     border-radius: 8px;
+    overflow: hidden;
 }
 .category h2 {
     font-size: 1.2em;
@@ -163,13 +164,14 @@ li.dropdown {
 
 .comments {
     position: static;
-    margin-left: 160px;
+    margin-left: 260px;
     background-color: #f9f9f9; /* Couleur de fond */
     border-radius: 8px;
     margin-top: 5vh;
     margin-right: 0.8vh;
     padding: 1%;
     font-size: 1.2em;
+    overflow: hidden;
 }
 
 
@@ -270,26 +272,58 @@ footer {
     border-color: #bb0000;
 }
 
-/* Login */
-.formBox {
+/*login*/
+.formlog {
     max-width: 20%;
     margin: 0 auto;
     margin-top: 1%;
-    padding: 3%;
+    padding: 2%;
     background-color: #ffffff;
     border-radius: 8px;
+}
+
+.formlog input {
+    width: 95%;
+    padding: 1em;
+    margin-bottom: 1em;
+    border: 1px solid #cccccc;
 
 }
-#login{
+#login {
     text-align: center;
 }
-/*design du formbox*/
+/*Couleur de signin/up */
+.formlog input[type="submit"] {
+    background-color: #174370;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+/*Des que l on passe la souris dessus l input signup/in sa change de couleur */
+.formlog input[type="submit"]:hover {
+    background-color: #117883;
+}
+
+/* inscription */
+.formBox {
+    max-width: 30%;
+    margin: 0 auto;
+    margin-top: 1%;
+    padding: 1%;
+    background-color: #ffffff;
+    border-radius: 8px;
+}
+
+
+
 .formBox input {
     width: 95%;
-    padding: 10px;
-    margin-bottom: 15px;
+    padding: 1em;
+    margin-bottom: 1em;
     border: 1px solid #cccccc;
-    font-size: 16px;
+    font-size: 1em;
 }
 
 /*Couleur de signin/up */
@@ -299,7 +333,6 @@ footer {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-size: 18px;
 }
 
 /*Des que l on passe la souris dessus l input signup/in sa change de couleur */
