--- a/View/Style/stylePortable.css
+++ b/View/Style/stylePortable.css
@@ -380,29 +380,39 @@ footer {
     border-radius: 10px;
     margin-left: 10%;
     width: 80%;
-    border-color: #B5532BFF;
-    background-color: #edd6a0;
+    border-color: #ffffff;
+    background-color: #174370;
     margin-top: 5em;
     text-align: center;
 }
 
+/* pour les billet */
 .btnBillet{
     width: 80%;
     margin-left: 10%;
     margin-top: 1%;
     border-radius: 10px;
-    background-color: #E5B596FF;
-    border-color: #B5532BFF;
+    background-color: #ffffff;
+    border-color: #174370;
 }
-.btnCreator{
-    z-index: auto;
-    padding: 1em;
-    margin-left: 95%;
+
+.btnCreator {
     position: fixed;
-    border-radius: 5px;
-    background-color: #edd6a0;
-    border-color: #B5532BFF;
+    width: 50px;
+    height: 50px;
+    right: 0;
+    margin-right: 40px;
+    bottom: 40px;
+    border-radius: 50%;
+    font-size: 24px;
+    background-color: #ffffff;
+    border-color: #174370;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 }
+
 
 /* tableau recherche*/
 table {
@@ -472,4 +482,112 @@ td{
     text-align: center;
     font-size: 18px;
     line-height: 1.6; /* S'il n'y a pas d'unité, cela représente un facteur multiplicateurde la taille de la police appliquée à l'élément */
+}
+/*Page resultat recherche*/
+#reche {
+    max-width: 80%;
+    margin: 0 auto;
+    margin-top: 1%;
+    padding: 2%;
+    background-color: #ffffff;
+    border-radius: 8px;
+}
+#misenforme1{
+    color: #174370;
+    margin-top: 20px;
+    text-align: center;
+}
+#misenforme {
+    color: #174370;
+    border-bottom: 2px solid #174370;
+    padding-bottom: 10px;
+    margin-top: 20px;
+}
+
+#palier {
+    list-style: none;
+    padding: 0;
+    display: flex;
+
+}
+
+#btnflexbillet {
+    align-items: center;
+    margin-bottom: 10px;
+    border: none;
+    background-color: #174370;
+    color: #fff;
+    border-radius: 8px;
+    list-style: none;
+}
+
+#btnflexbillet:hover {
+    background-color: #117883;
+}
+/* profil utilisateur public et profil */
+
+#profilpub{
+    max-width: 50%;
+    margin: 0 auto;
+    margin-top: 1%;
+    padding: 2%;
+    background-color: #ffffff;
+    border-radius: 8px;
+
+}
+#misenformep{
+    border-bottom: 2px solid #174370;
+    padding-bottom: 10px;
+}
+#profilpub #paragraphe {
+    margin: 0 0 10px;
+
+}
+
+#btnprofil {
+    display: block;
+    width: 37em;
+    padding: 10px;
+    border: none;
+    background-color: #174370;
+    color: #fff;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 4px;
+    margin-bottom: 10px;
+}
+
+#btnprofil:hover {
+    background-color: #117883;
+}
+/* admin*/
+#adminbox {
+    max-width: 70%;
+    margin: 0 auto;
+    margin-top: 1%;
+    padding: 2%;
+    background-color: #ffffff;
+    border-radius: 8px;
+}
+
+#adminbox input, #adminbox textarea {
+    width: calc(100% - 1em);
+    padding: 1em;
+    margin-bottom: 1em;
+    border: 1px solid #cccccc;
+    font-size: 1em;
+    box-sizing: border-box; /* Pour inclure la bordure et le padding dans la largeur */
+    resize: vertical;
+}
+
+#adminbox input[type="submit"] {
+    background-color: #174370;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+#adminbox input[type="submit"]:hover {
+    background-color: #117883;
 }
