correctif du css sur les page

--- a/View/Style/style.css
+++ b/View/Style/style.css
@@ -273,7 +273,7 @@ footer {
 }
 
 /*login*/
-.formlog {
+#formlog {
     max-width: 20%;
     margin: 0 auto;
     margin-top: 1%;
@@ -282,18 +282,21 @@ footer {
     border-radius: 8px;
 }
 
-.formlog input {
-    width: 95%;
+#formlog input {
+    width: calc(100%);
     padding: 1em;
     margin-bottom: 1em;
     border: 1px solid #cccccc;
+    font-size: 1em;
+    box-sizing: border-box; /* Pour inclure la bordure et le padding dans la largeur */
+    resize: vertical;
 
 }
 #login {
     text-align: center;
 }
 /*Couleur de signin/up */
-.formlog input[type="submit"] {
+#formlog input[type="submit"] {
     background-color: #174370;
     color: white;
     border: none;
@@ -302,32 +305,30 @@ footer {
 }
 
 /*Des que l on passe la souris dessus l input signup/in sa change de couleur */
-.formlog input[type="submit"]:hover {
+#formlog input[type="submit"]:hover {
     background-color: #117883;
 }
 
 /* inscription */
-.formBox {
+#formBox {
     max-width: 30%;
-    margin: 0 auto;
-    margin-top: 1%;
-    padding: 1%;
+    margin: 2% auto;
+    padding: 2%;
     background-color: #ffffff;
     border-radius: 8px;
 }
 
 
-
-.formBox input {
-    width: calc(100% - 1em);
+#formBox input{
+    width: calc(100%);
     padding: 1em;
     margin-bottom: 1em;
     border: 1px solid #cccccc;
     font-size: 1em;
+    box-sizing: border-box; /* Pour inclure la bordure et le padding dans la largeur */
 }
 
-/*Couleur de signin/up */
-.formBox input[type="submit"] {
+#formBox input[type="submit"] {
     background-color: #174370;
     color: white;
     border: none;
@@ -335,10 +336,10 @@ footer {
     cursor: pointer;
 }
 
-/*Des que l on passe la souris dessus l input signup/in sa change de couleur */
-.formBox input[type="submit"]:hover {
+#formBox input[type="submit"]:hover {
     background-color: #117883;
 }
+
 
 /*page 404 */
 .image404{
@@ -526,7 +527,7 @@ footer {
 }
 
 #adminbox input, #adminbox textarea {
-    width: calc(100% - 1em);
+    width: calc(100%);
     padding: 1em;
     margin-bottom: 1em;
     border: 1px solid #cccccc;
