--- a/View/Style/style.css
+++ b/View/Style/style.css
@@ -27,7 +27,19 @@ body {
     box-sizing: border-box;
     top: 0;
 }
+#deroulant {
+    display: flex;
+    flex-direction: column; /* Alignement vertical */
+    font-size: 7px;
+    margin-top: 5%;
+    background-color: #174370;
+    color: #ffffff;
+    transition: background-color 0.3s;
+}
 
+#deroulant:hover {
+    background-color: #117883;
+}
 li {
     float: left;
 }
