--- a/View/Style/stylePortable.css
+++ b/View/Style/stylePortable.css
@@ -600,3 +600,9 @@ td{
 #adminbox input[type="submit"]:hover {
     background-color: #117883;
 }
+.btnBilletCategory{
+    background-color: #174370;
+    color: white;
+    border-radius: 10px;
+    cursor: pointer;
+}
