--- a/View/Style/style.css
+++ b/View/Style/style.css
@@ -428,6 +428,7 @@ footer {
     cursor: pointer;
     font-size: 16px;
     transition: background-color 0.3s;
+    border-radius: 10px;
 }
 
 #connectedform button:hover {
