--- a/View/Style/stylePortable.css
+++ b/View/Style/stylePortable.css
@@ -146,9 +146,8 @@ li.dropdown {
 
 /* billet et commentaire a droite */
 
-.comments {
+.Billet {
     position: static;
-    margin-left: 160px;
     background-color: #f9f9f9; /* Couleur de fond */
     border-radius: 8px;
     margin-top: 5vh;
@@ -603,6 +602,22 @@ td{
     background-color: #117883;
 }
 .btnBilletCategory{
+    background-color: #174370;
+    color: white;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.Comments {
+    position: static;
+    background-color: #f9f9f9; /* Couleur de fond */
+    border-radius: 8px;
+    margin-top: 0.5%;
+    margin-right: 0.8vh;
+    padding: 1%;
+    font-size: 1.2em;
+    overflow: hidden;
+}
+.btnCommentCategory{
     background-color: #174370;
     color: white;
     border-radius: 10px;
