--- a/View/Style/stylePortable.css
+++ b/View/Style/stylePortable.css
@@ -14,7 +14,7 @@ body {
 
 /* Enleve la flèche dans le menu déroulement de categories a cause de la library qui la rajoute*/
 .menu .dropdown .fa-caret-down {
-    display: none; /* Masque la flèche par défaut */
+    display: none;
 }
 
 .menu {
@@ -141,7 +141,7 @@ li.dropdown {
 }
 .category h2 {
     font-size: 1.2em;
-    margin-bottom: 15px; /* Espacement en bas du titre */
+    margin-bottom: 15px;
 }
 
 /* billet et commentaire a droite */
@@ -162,9 +162,9 @@ li.dropdown {
     border: 1px solid #bc522b;
     width: 100%;
     padding: 1vh;
-    overflow: hidden; /* empeche le debordement */
-    white-space: nowrap; /* empeche les retour a la ligne etla deformation du bouton */
-    text-overflow: ellipsis; /* met "..." en cas de debordement */
+    overflow: hidden;
+    white-space: nowrap; /* empeche les retour a la ligne et la deformation du bouton */
+    text-overflow: ellipsis;
 }
 
 .info-section {
@@ -194,7 +194,7 @@ li.dropdown {
     display: flex;
     min-width: 150px;
     font-size: 222%;
-    text-overflow: ellipsis; /* met "..." en cas de debordement */
+    text-overflow: ellipsis;
 }
 
 /* La barre de recherche */
@@ -202,25 +202,25 @@ li.dropdown {
 .search {
     display: inline-flex;
     align-items: center;
-    color: #fff; /* Couleur du texte */
+    color: #fff;
     padding: 10px;
-    border-radius: 4px; /* Coins arrondis */
-    border: 1px solid #fff; /* Bordure blanche de 1 pixel */
+    border-radius: 4px;
+    border: 1px solid #fff;
 }
 
 
 /* Style des éléments input et button à l'intérieur de search */
 .search input, .search button {
-    background: transparent; /* Fond transparent */
+    background: transparent;
     color: inherit;
-    border: none; /* Pas de bordure */
-    outline: none; /* Pas de contour */
+    border: none;
+    outline: none;
 }
 
 /* Style de l'input de recherche */
 .searchinput {
     width: 0;
-    transition: width 0.5s; /* Transition de la largeur */
+    transition: width 0.5s;
 }
 
 /* Style du bouton de recherche */
@@ -229,13 +229,13 @@ li.dropdown {
     place-items: center;
     width: 25px;
     height: 25px;
-    cursor: pointer; /* Curseur pointeur */
-    transition: color 0.15s; /* Transition de la couleur */
+    cursor: pointer;
+    transition: color 0.15s;
 }
 
 /* Style au survol du bouton de recherche */
 .searchbutton:hover {
-    color: #e3e3e3; /* Changement de couleur au survol */
+    color: #e3e3e3;
 }
 
 /* Style du label et de l'input */
@@ -364,7 +364,7 @@ footer {
     margin-bottom: 1em;
     border: 1px solid #cccccc;
     font-size: 1em;
-    box-sizing: border-box; /* Pour inclure la bordure et le padding dans la largeur */
+    box-sizing: border-box;
 }
 
 #formBox input[type="submit"] {
@@ -391,6 +391,7 @@ footer {
     border-color: #ffffff;
     background-color: #174370;
     margin-top: 5em;
+    color: #ffffff;
     text-align: center;
 }
 
@@ -586,7 +587,7 @@ td{
     margin-bottom: 1em;
     border: 1px solid #cccccc;
     font-size: 1em;
-    box-sizing: border-box; /* Pour inclure la bordure et le padding dans la largeur */
+    box-sizing: border-box;
     resize: vertical;
 }
 
@@ -601,6 +602,13 @@ td{
 #adminbox input[type="submit"]:hover {
     background-color: #117883;
 }
+
+#deleteEvenAdmin{
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+}
+/*billet */
 .btnBilletCategory{
     background-color: #174370;
     color: white;
@@ -623,3 +631,54 @@ td{
     border-radius: 10px;
     cursor: pointer;
 }
+
+.Comments label {
+    display: block;
+    margin-bottom: 5px;
+
+}
+
+.btnupvote, .btndownvote {
+    float: left;
+    width: 30px;
+    height: 30px;
+    font-size: 24px;
+    border-radius: 30%;
+    background-color: #174370;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    color: #ffffff;
+    margin-right: 5px;
+    border: none;
+}
+/* btn supprimer et modifier le commentaire */
+.btnpoubelle, .btnmodif{
+    width: 30px;
+    height: 30px;
+    font-size: 20px;
+    border-radius: 30%;
+    background-color: #174370;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    color: #ffffff;
+    margin-right: 5px;
+    border: none;
+}
+/* texte area du billet */
+
+.Comments textarea {
+    width: 90%;
+    height: 100px;
+    resize: vertical;
+
+}
+/* ajoute un espacement a la fin de la page*/
+#CommentAction{
+    margin-bottom: 5%;
+}
+
+
+
