--- a/View/Style/style.css
+++ b/View/Style/style.css
@@ -601,10 +601,10 @@ footer {
 }
 /* btn supprimer et modifier le commentaire */
 .btnpoubelle, .btnmodif{
-    width: 30px;
+    width: 130px;
     height: 30px;
     font-size: 20px;
-    border-radius: 30%;
+    border-radius: 20px;
     background-color: #174370;
     justify-content: center;
     align-items: center;
@@ -626,8 +626,8 @@ footer {
     margin-bottom: 5%;
 }
 
-
-
-
+#icon{
+    max-width: 20px;
+}
 
 
