--- a/View/Style/style.css
+++ b/View/Style/style.css
@@ -586,10 +586,10 @@ footer {
 
 .btnupvote, .btndownvote {
     float: left;
-    width: 30px;
+    width: 130px;
     height: 30px;
     font-size: 24px;
-    border-radius: 30%;
+    border-radius: 20px;
     background-color: #174370;
     display: flex;
     justify-content: center;
