--- a/View/Style/style.css
+++ b/View/Style/style.css
@@ -25,7 +25,7 @@ body {
     box-sizing: border-box;
     top: 0;
 }
-#deroulant {
+.deroulant {
     display: flex;
     flex-direction: column; /* Alignement vertical */
     font-size: 7px;
@@ -34,7 +34,7 @@ body {
     transition: background-color 0.3s;
 }
 
-#deroulant:hover {
+.deroulant:hover {
     background-color: #117883;
 }
 li {
