--- a/View/Style/style.css
+++ b/View/Style/style.css
@@ -193,7 +193,7 @@ li.dropdown {
     font-family: Arial;
 }
 
-.section-flex{
+.sectionflex{
     display: flex;
     justify-content: center;
     align-items: center;
